# alexwlchan.net

./: .dockerignore  .gitattributes  .gitignore  .mergify.yml  .rubocop.yml  .travis.yml  Caddyfile  Dockerfile  Gemfile  LICENSE  Makefile  README.md  Rakefile  Static websites for tiny archives.md  TODO.md  TODO.taskpaper  _config.yml  archive_elsewhere.py  archive_elsewhere.rb  aside.sass.scss  azure-pipelines.yml  build.py  bundler.Dockerfile  commits.txt  create_post.rb  create_twitter_auth.sh  delete_bad_images.py  dev_requirements.in  dev_requirements.txt  docker-compose.yml  front-matter.json  greeting.rb  index.md  install_jekyll.sh  install_specktre.sh  layout.html  local.Caddyfile  maths.md  netlify.toml  notes.md  (+15 more)
.github/: dependabot.yml  main.workflow
.netlify/: state.json
.travis/: before_cache.sh  before_script.sh  deploy.sh  freeze_docker_images.sh  id_rsa.env  id_rsa_push_key.enc  install.sh  run.sh  unfreeze_docker_images.sh
_includes/: footer.html  head.html  header.html  pagination.html  post_content.html  socialgraph.html
_layouts/: archive.html  default.html  group_index.html  home.html  monthly_archive.html  page.html  tag_index.html  yearly_archive.html
_plugins/: _tag_gen.rb  archives.rb  atom_filter.rb  cat_and_tag_generator.rb  date_archives.rb  monthly_archive.rb  slides.rb  static_file_generator.rb  theming_css.rb  twitter.rb
_posts/: 2017-09-05-welcome-to-jekyll.markdown
_scss/: _archive.scss  _aside.scss  _code.scss  _figures.scss  _footer.scss  _index.scss  _layout.scss  _main.scss  _mixins.scss  _one_offs.scss  _page.scss  (+6 more)
(+4043 files in other folders)
